--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
     "consign": "^0.1.6",
     "express": "^4.17.1",
     "moment": "^2.29.1",
-    "mysql": "^2.18.1"
+    "mysql": "^2.18.1",
+    "path": "^0.12.7",
+    "sequelize": "^6.6.2",
+    "sequelize-cli": "^6.2.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.7"
