--- a/package.json
+++ b/package.json
@@ -14,11 +14,12 @@
     "express": "^4.17.1",
     "moment": "^2.29.1",
     "mysql": "^2.18.1",
+    "mysql2": "^2.2.5",
     "path": "^0.12.7",
-    "sequelize": "^6.6.2",
-    "sequelize-cli": "^6.2.0"
+    "sequelize": "^6.6.2"
   },
   "devDependencies": {
-    "nodemon": "^2.0.7"
+    "nodemon": "^2.0.7",
+    "sequelize-cli": "^6.2.0"
   }
 }
