--- a/package.json
+++ b/package.json
@@ -10,11 +10,17 @@
   "author": "Joathan Lopes, Gabriel Tavares e Matheus Caldas",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^3.0.8",
     "consign": "^0.1.6",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
     "moment": "^2.29.1",
     "mysql": "^2.18.1",
     "mysql2": "^2.2.5",
+    "passport": "^0.4.1",
+    "passport-http-bearer": "^1.0.1",
+    "passport-local": "^1.0.0",
     "path": "^0.12.7",
     "sequelize": "^6.6.2"
   },
